--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
 	}
 	.b-sprint__sidebar_right {
 	margin-right: 120px;
+	margin-top: -3px;
 	}
 	.b-sprint__sidebar_left {
 	margin-left: 120px;
+        margin-top: -3px;
 	}
   .allkeys{
 	display:none;
