--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 <link rel="stylesheet" type="text/css" href="./files/style(4).css">	
 
 <style>
+	@media (min-height: 1px) and (max-width: 1450px) {
+	.b-sprint__clock {
+	left: 46%;
+  }
+	}
     @media (min-height: 1px) and (max-width: 1220px) {
 	.container-fluid{
 	margin-left: -10px
@@ -56,7 +61,7 @@
 	left: 44.7%;	
   }
     .progressbar_wrap{
-	margin-left:58px;
+	margin-left:55px;
   }
     .b-sprint__wrapper{
 	background:none!important;
