--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <html lang="eng">
 
 <head>  
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta property="og:title" content="Unit 4 vocabulary" />
+  <meta property="og:description" content="Vocabulary review" />
+  <meta property="og:image" content="https://github.com/gangstasoul/Duel_of_minds-2/blob/main/media/Blue-team.png" />
+  <meta property="og:url" content="https://github.com/gangstasoul/Duel_of_minds-2/blob/main/index.html" />
+  <meta property="og:type" content="website" />
 
 <link rel="icon" href="./media/favicon.png" type="image/png">
  
